--- a/Tutorial/PythonTutorial.tex
+++ b/Tutorial/PythonTutorial.tex
@@ -1,11 +1,11 @@
 \section{Setting Up}
 
-This Tutorial session aims to provide a brief revision of programming concepts using Python. We will use the Anaconda Python Distribution, a Python-language-based ``ecosystem'' which is free, already contains the essential packages for scientific computing and can easily be downloaded from the internet\footnote{Available at \url{https://conda.io/docs/install/quick.html}}. Anaconda should already be available when you log in University computers, but you are free to use your own personal computer if you wish to. If this is your first time installing Python in your personal computer, we urge you to adopt Python version 3.6 instead of version 2.7.
+This Tutorial session aims to provide a brief revision of programming concepts using Python. We will use the Anaconda Python Distribution, a Python-language-based ``ecosystem'' which is free, already contains the essential packages for scientific computing and can easily be downloaded from the internet\footnote{Available at \url{https://conda.io/docs/install/quick.html}}. Anaconda is already available when you log in University computers, but you are free to use your own personal computer if you wish to do so. If this is your first time installing Python in your personal computer, we urge you to adopt Python version 3.6 instead of version 2.7.
 
 The Anaconda Python Distribution includes a command-line package manager application called {\tt conda} that allows the user to quickly install, run, and update packages and their dependencies:
 
 \begin{itemize}
-	\item In Windows, {\tt conda} commands must be run in the ``Anaconda Prompt'', located within the ``Anaconda'' folder in your Start Menu;
+	\item In Windows, {\tt conda} commands must be run in the ``Anaconda Prompt'', located within the ``Anaconda'' folder in your Start Menu (you might have to right-click on the ``Anaconda Prompt'' icon and select ``Run as Administrator'' to install new packages);
 	\item In Unix systems, the {\tt conda} command can be run directly in the Unix Shell (Bash).
 \end{itemize}
 
@@ -13,7 +13,7 @@ We provide an example of how to upgrade a package in the next section; more info
 
 \subsection{The Spyder IDE}
 
-We will use the Spyder Interactive Development Environment (IDE), which is included in Anaconda; it should be available at the Start Menu (in Windows machines) after installing Anaconda. By default, the Spyder IDE contains a file editor on the left-hand side, an IPython (``Interactive Python'') console on the bottom right, and a ``Variable Explorer''/``File Explorer''/``Help'' pane on the top right. An excellent tutorial of Spyder's main functionalities is available inside Spyder itself, via the ``Help'' menu - ``Spyder Tutorial''; make sure to have a look at it.
+We will use the Spyder Interactive Development Environment (IDE), which is included in Anaconda; it should be available at the Start Menu (in Windows machines) after installing Anaconda. By default, the Spyder IDE contains a file editor on the left-hand side, an IPython (``Interactive Python'') console on the bottom right, and a ``Variable Explorer''/``File Explorer''/``Help'' pane on the top right. On more recent versions, an excellent tutorial of Spyder's main functionalities is available via the ``Help'' menu - ``Spyder Tutorial''; try to have a look at it.
 
 You will often be required to download and use special functions and data files in your codes; make sure these files are ``visible'' to your current Python program by having the Spyder working directory set to the same folder where they are located. Remember to always check if the current Spyder working directory, displayed on the top right of the Spyder screen, is set to the correct location; if not, you can change directory via the directory bar itself or via the ``File Explorer'' pane.
 
@@ -25,7 +25,7 @@ A new version of the Spyder IDE is released every few months, and we recommend k
 conda update spyder
 \end{lstlisting}
 
-inside the ``Anaconda Prompt'' for Windows machines, or inside the shell for Unix machines. We assume you will be running the most recent version of Spyder, so be sure to update Spyder immediately after installing the Anaconda Python Distribution in your personal computer. You don't have to worry with this when using University computers.
+inside the ``Anaconda Prompt'' for Windows machines, or inside the shell for Unix machines. We will assume you are running the most recent version of Spyder, so be sure to update Spyder immediately after installing the Anaconda Python Distribution in your personal computer. You don't have to worry with this when using University computers.
 
 \subsubsection{Configuring Spyder}
 
@@ -54,7 +54,7 @@ inside the ``Anaconda Prompt'' for Windows machines - or inside the shell for Un
 
 The {\tt pyaudio} package, while very powerful, is not very straightforward to use. Hence, we will provide a Python module called {\tt duplexAudio}, developed by ISVR researchers, that implements a more user-friendly set of functions around {\tt pyaudio}.
 
-Once downloaded, we suggest permanently moving the {\tt duplexAudio.py} file to a folder of your preference; in order to use {\tt duplexAudio} within Spyder, we must add the folder location to the {\tt PYTHONPATH}:
+Once downloaded, we suggest permanently moving the {\tt duplexAudio.py} file to a folder of your preference; in order to have {\tt duplexAudio} available within Spyder, we must add the folder location to the {\tt PYTHONPATH}:
 
 \begin{itemize}
 	\item Go to ``Tools'' - ``PYTHONPATH manager'', select ``Add path'', and select the folder where {\tt duplexAudio} is located;
@@ -67,50 +67,55 @@ This concludes the setting up process; you should now be able to use {\tt duplex
 
 Python is a general-purpose programming language, with a large number of modules available for scientific computing. This tutorial will cover some basic programming concepts, such as conditional branching, functions, creating arrays of numeric data, manipulating and plotting data.
 
-You will receive a script containing sections of code, but some parts will be missing; use the IPython console to interact with the available data and fill in the gaps with your own code.
+You will receive a script containing sections of code, but some parts will be missing; use the IPython console to interact with the available data and fill in the gaps with your own code. The script is divided in ``code cells'', which can be run individually with the {\tt CTRL} + {\tt ENTER} command; cells are separated by lines starting with the ``{\tt \# \%\%}'' characters.
+
+You are expected to search the internet for Python functions other than those shown here and learn how to use them by yourself; the Reference Sheet contains some useful references for finding more informations on Python language. Most tasks can be solved in more than one way - don't be afraid to explore different ideas, but remember to always check your intermediate results using quick checks at the IPython console.
 
 \subsection{Conditional Statements - {\tt if}}
 
 This section is intended for new programmers - if you have not programmed before, or are new to Python, use this exercise to familiarise yourself with the Spyder IDE, and how different sections of code can be selectively run using the {\tt if} statement - a very important programming construction.
 
-Python functions begin with the {\tt def} keyword, typically {\tt return} a value to the user.  See Section 6 of the Python Reference Sheet for information on functions. 
+You will write a function in Python code that checks the value of an input variable and returns different character strings based on that value. Python functions begin with the {\tt def} keyword, and use indentation to denote the function body; see Section 6 of the Python Reference Sheet for more informations on functions. 
 
-Write a function {\tt traffic\_light(load)} that takes a floating point number {\tt load}. The function should return the string:
+Your task is to write a function {\tt traffic\_light(load)} that takes a floating point number {\tt load} and return the string:
 
 \begin{itemize}
-	\item "green" for values of load below 0.7;
-	\item "amber" for values of load equal to or greater than 0.7 but smaller than 0.9;
-	\item "red" for values of load equal to 0.9 or greater than 0.9.
+	\item "green" for values of {\tt load} below 0.7;
+	\item "amber" for values of {\tt load} equal to or greater than 0.7 but smaller than 0.9;
+	\item "red" for values of {\tt load} equal to 0.9 or greater than 0.9.
 \end{itemize}
 
-Example:
+As an example, calling this function with an argument {\tt load = 0.5} in the IPython console should yield the following output:
 
 \begin{lstlisting}[frame=single]
 In [ ]: traffic_light(0.5)
 Out[ ]: 'green'
 \end{lstlisting}
 
-Function prototype:
+Use the function prototype in your Python script (shown below) and complete it to perform the required tasks:
 
 \begin{lstlisting}[frame=single]
 def traffic_light(load):
-	"""Returns a string denoting the colour of a traffic light in response
-	to floating point number load"""
+    """
+    Returns a string denoting the colour of a traffic light in response
+    to floating point number 'load'
+    """
 
-	if load ....
-		outputString = 'green'
-	elif  ..........
-		outputString = .......
-	.......
-		..........
-	return outputString
+    if load ...
+        outputString = 'green'
+    elif ...
+        outputString = ...
+    ...
+        ...
+        
+    return outputString
 \end{lstlisting}
 
 \subsection{Creating and Plotting Signals}
 
-We will start by creating and plotting some signals. We will use the Numpy package to create and manipulate $N$-dimensional arrays of sampled data, and the Pyplot framework (a part of the Matplotlib package) to plot data; see the reference sheet for general instructions on the Python language and these packages.
+We will now see how to manipulate signals. We will use the Numpy package to create and manipulate $N$-dimensional arrays of sampled data, and the Pyplot framework (a part of the Matplotlib package) to plot data; see the reference sheet for general instructions on these packages.
 
-Signals are generally obtained from experimental data as a series of values sampled from a sensor at equispaced time instants; each sample is stored as a single number, and the collection of samples is generally stored as a one-dimensional array (i.e. a ``vector''). Most signals are a function of time, and hence we must start by creating and plotting the time base: an array containing the time instants at which the signal values are sampled or generated.
+Signals are generally obtained from experimental data as a series of values sampled from a sensor at equispaced time instants; each sample is stored as a single number, and the collection of samples is usually stored as a one-dimensional array (i.e. a ``vector''). Most signals are a function of time, and hence we generally start by creating a time base: an array containing the time instants at which the signal values are sampled or generated.
 
 \begin{lstlisting}[frame=single]
 # import the necessary modules
@@ -126,24 +131,25 @@ dt = 1/fs
 # total length for the time base (in seconds)
 T_total = 0.5
 
-# create a time base using 'np.linspace' command
-# -> syntax: np.linspace(start, end, number_of_points)
-t = np.linspace(0, T_total-dt, fs*T_total)
+# create a time base using 'np.arange' command
+# -> syntax: np.arange(start, end (not included), step_size)
+t = np.arange(0, T_total, dt)
 
 # open a new figure and plot the time base
 plt.figure()
 plt.plot(t)
 plt.title("Time base vector")
-plt.xlabel("samples")
-plt.ylabel("time")
+plt.xlabel("Index")
+plt.ylabel("Time [s]")
 \end{lstlisting}
 
 We can make a few checks to confirm this time base is indeed what we expected it to be:
 
 \begin{itemize}
 	\item We can verify how many samples this time base has by typing {\tt t.shape} in the IPython console: this command tells us how many elements the array {\tt t} has in each of its dimensions. How many dimensions and how many elements in each dimension do you believe {\tt t} must have?
-	\item Arrays generated through {\tt np.linspace} have its elements evenly spaced, so the difference between the elements at any two consecutive indices {\tt t[i]} and {\tt t[i+1]} must be identical to the sampling interval; verify this is indeed the case. Note that Python uses zero-based indices - i.e. the first element in an array or sequence has index 0;
-	\item In Python, we can use negative indices to ``wrap around'' and read the array starting from the last elements: the last entry in an array can be accessed with the index {\tt -1}, the second-to-last entry with the index {\tt -2}, and so on. What should be the ``standard'' index for the last element of the array {\tt t}? What should its content be?
+	\item Arrays generated through {\tt np.arange} have its elements evenly spaced, so the difference between the elements at any two consecutive indices {\tt t[i]} and {\tt t[i+1]} must be identical to the sampling interval; verify this is indeed the case. Note that Python uses zero-based indices - i.e. the first element in an array or sequence has index 0;
+	\item Unfortunately, {\tt np.arange} is prone to inconsistencies when using fractional step sizes due to numerical precision; the function {\tt np.linspace} is recommended for those cases. Research how to use {\tt np.linspace} to create the same time base; note that its arguments will not be the same as {\tt np.arange}!
+	\item In Python, we can use negative indices to ``wrap around'' and read the array starting from the last elements: the last entry in a dimension can be accessed with the index {\tt -1}, the second-to-last entry with the index {\tt -2}, and so on. What other index can be used to access the last element of the array {\tt t}? What are its contents?
 \end{itemize}
 
 Let us now use this time base and synthesize a signal containing a 500 Hz sine wave:
@@ -160,10 +166,10 @@ plt.plot(t, x)
 \end{lstlisting}
 
 \begin{itemize}
-	\item Add your own title and label the axes of this new figure!
+	\item Add your own title and label the axes of this new figure! What are the units of each axis?
 \end{itemize}
 
-You probably cannot see much in this figure as it is; use the zoom and the pan buttons to inspect the plot in more detail, and press the ``home'' button to reset to the original view. Try to zoom in around one of the peaks; you should note that the graph appears to be continuous, but it is instead made of a series of straight lines connecting two adjacent samples. This fact can be made evident by plotting the same signal with a marker at the samples locations, and not using a line to connect them; let's use red circles (with the extra argument ``{\tt ro}'') as markers:
+You probably cannot see much in this figure as it is; use the zoom and the pan buttons to inspect the plot in more detail, and press the ``home'' button to reset to the original view. Try to zoom in around one of the peaks; you should note that the graph appears to be continuous, but it is instead made of a series of straight lines connecting two adjacent samples. This fact can be made evident by plotting the same signal with a marker at the samples locations, and by not using a line to connect them; let's use red circles (with the extra argument ``{\tt ro}'') as markers:
 
 \begin{lstlisting}[frame=single]
 plt.plot(t, x, "ro")
@@ -171,7 +177,7 @@ plt.plot(t, x, "ro")
 
 Note that unless you explicitly create a new Figure, {\tt pyplot} will add the new plot to the currently active Figure. You should now be able to visualise the individual samples created by your code; each point represents one sample of the {\tt x} array.
 
-Now, create and plot:
+Now, edit the code to create and plot:
 
 \begin{itemize}
 	\item a sine wave of a different frequency;
@@ -197,68 +203,77 @@ gain = 0.5
 blockLength = 512
 
 # Use the provided library function to play back the file
-# using defaults for arguments
-#
-# Recommended default APIs:
+# using defaults for arguments (audio API, number of record channels, etc.)
 # --> in Windows: audioApi = "MME"
-# --> in Linux/Ubuntu:  audioApi = "ALSA"
-# --> in Mac: audioApi = "CoreAudio"
+# --> in Ubuntu:  audioApi = "ALSA"
+# --> in OSX:     audioApi = "CoreAudio"
+
 duplexAudio(x*gain, fs, blockLength, audioApi="MME")
 \end{lstlisting}
 
 By now, you should have a code that creates, plots and plays back a sine wave. Save your file, and try running it with a few different parameters; for example:
 
 \begin{itemize}
-	\item Plot and play sine waves at frequencies 250 Hz, 500 Hz and 750 Hz; what do you expect will happen?
-	\item Change the sampling frequency to 1000 Hz and repeat the above exercise; what do you expect will happen?
+	\item What do you expect will happen if you play the same sine wave, but giving a sampling frequency of $f_s/2$ to {\tt duplexAudio}? And what if you use $2f_s$ instead?
+	\item Create and play sine waves at frequencies 250 Hz, 500 Hz and 750 Hz at $f_s = 44100$ Hz; what do you expect will happen? Change the sampling frequency to 1000 Hz and repeat the above exercise; what do you expect will happen?
 \end{itemize}
 
 
 \subsection{Summing Signals - Fourier Synthesis}
 
-A more complicated periodic signal can be built from a sum of sine and cosine waves using Fourier synthesis; this next exercise will cover how to approximate a sawtooth wave with a partial Fourier sum. A discrete Fourier sine series can be built as the sum of the first $M$ harmonics:
+A more complicated periodic signal can be built from a sum of sine and cosine waves using Fourier synthesis; this next exercise will cover how to approximate a sawtooth wave with a partial Fourier sum. A partial Fourier sine series can be built as the sum of the first $M$ harmonics:
 
 \begin{equation}
 	x[n] = \sum_{m=0}^{M-1} b_m \sin(2 \pi m f_0 t[n]),
 \end{equation}
 
-where $f_0$ is the fundamental frequency. The function {\tt bm\_saw(M)} shown below returns an array containing the first $M$ coefficients for the Fourier sine series of a sawtooth wave:
+where $b_m$ are the Fourier coefficients and $f_0$ is the fundamental frequency.
+
+You will be given a function {\tt bm\_saw(M)} that returns an array containing the first $M$ coefficients for the Fourier sine series of a sawtooth wave; for example, the function output for $M=3$ is:
 
 \begin{lstlisting}[frame=single]
-def bm_saw(M):
-    m = np.arange(M)
-    bm = -2*((-1)**m)/(np.pi*m)
-    bm[0] = 0
-
-    return bm
+In [ ]: bm_saw(3)
+Out[ ]: array([ 0.        ,  0.63661977, -0.31830989])
 \end{lstlisting}
 
+Repeating tasks, such as building a Fourier series, are well suited for using a {\tt for}-loop: a code section that repeats itself a fixed number of times while iterating over a sequence; see the Reference Sheet for the basic details of {\tt for}-loops.
 
-Repeating tasks, such as building a Fourier series, are well suited for using a {\tt for}-loop: a code section that repeats itself a fixed number of times while iterating over a sequence; see the Reference Sheet for the basic details of {\tt for}-loops. The code below creates an empty array and sums a single Fourier sine component to it; modify this code so it will sum all terms based on the length of the array of coefficients {\tt bn}.
+The function {\tt fourier\_sine} below receives a fundamental frequency {\tt f0}, an array of Fourier coefficients {\tt bm} and a time base {\tt t}, creates an empty array {\tt x} and sums a single Fourier sine component to it:
 
 \begin{lstlisting}[frame=single]
-def fourier_sine(f0, bn, t):
+def fourier_sine(f0, bm, t):
     x = np.zeros(t.shape[0])
 
-    for n, b in enumerate(bn):
-        x += b*np.sin(2*np.pi*n*f0*t)
+    x += bm[0]*np.sin(2*np.pi*0*f0*t)
 
     return x
-
-fs = 44100
-dt = 1/fs
-T_max = 0.4
-f0 = 1000
-
-t = np.linspace(0, T_max-dt, fs*T_max)
-
-plt.figure()
-for N_saw in range(1, 5):
-    saw_sine = fourier_sine(f0, bm_saw(N_saw), t)
-    plt.plot(t[:2*fs//f0], saw_sine[:2*fs//f0])
-
-    duplexAudio(saw_sine, fs, 1024, audioApi='ALSA')
 \end{lstlisting}
+
+\begin{itemize}
+	\item Modify this code so it will sum all terms based on the array of coefficients {\tt bm};
+\end{itemize}
+
+The Fourier Transform of a signal can be calculated and plotted with the following commands:
+
+\begin{lstlisting}[frame=single]
+# FFT parameters
+N_dft = 2048
+df = fs/N_dft
+freq = np.linspace(0, fs-df, N_dft)
+
+# calculate FFT (freq domain)
+X = np.fft.fft(x, n=N_dft)
+
+# plot using log scale on freq axis and magnitude in decibels
+plt.figure()
+plt.semilogx(freq[:N_dft//2], 20*np.log10(np.abs(X[:N_dft//2])))
+plt.xlabel("Frequency [Hz]")
+plt.ylabel("Magnitude [dB]")
+\end{lstlisting}
+
+\begin{itemize}
+	\item Write a code to calculate, plot (in the time domain and in the frequency domain) and play sawtooth waveforms starting from 1 Fourier coefficient up to 5 Fourier coefficients, and compare the differences in both the waveform plots and their sounds.
+\end{itemize}
 
 
 \subsection{Reading {\tt .wav} files}
@@ -272,11 +287,11 @@ from wavToFloat import wavToFloat
 # obtain the sampling frequency and the bitstream
 fs, x_raw = wavio.read("file1.wav")
 
-# Convert the samples to floating-point numbers
+# Convert the samples from integers to floating-point numbers
 x_wav = wavToFloat(x_raw)
 
 # create the time base
-t = np.linspace(0, (x_wav.shape[0]-1)/fs, x_wav.shape[0])
+t = np.arange(0, x_raw.shape[0]/fs, 1/fs)
 
 plt.figure()
 plt.plot(t, x_wav, "b-")
@@ -286,49 +301,54 @@ plt.ylabel("Amplitude")
 \end{lstlisting}
 
 \begin{itemize}
-	\item Visually inspect the signal by using the zoom tools; what do you think this signal represents? 
+	\item Visually inspect the signal by using the zoom tools; where do you think this signal originated from? 
 	\item Use the code for playing signals with {\tt duplexAudio} and listen to this signal; did you guess correctly?
 \end{itemize}
 
+Always keep in mind that such files consist of arrays of numerical values, and can be manipulated as such: for example, {\tt file2.wav} is a modified version of {\tt file1.wav}.
+
+\begin{itemize}
+	\item Compare both files and try to identify which changes were made to it; can you transform it back to its original form? Which steps are required to do so?
+\end{itemize} 
+
 \subsection{Array Indices and Array Content}
 
-As previously discussed, arrays and sequences are indexed; one can then read a portion of an array using slicing, denoted by square brackets after an array name. We write
+As previously discussed, arrays and sequences are indexed; one can then read a portion of an array using slicing, an operation denoted by square brackets after an array name. We write
 
 \begin{lstlisting}[frame=single]
 x[i:j]
 \end{lstlisting}
 
-in order to obtain all elements between indices {\tt i} (included) and {\tt j} (not included); this operation will return an array with {\tt j-i} elements. The Reference Sheet contains more information on slicing operations; make sure you understand it well.
+where {\tt i}, {\tt j} are integer-type variables, to obtain all elements between indices {\tt i} (included) and {\tt j} (not included); this operation returns an array with {\tt j-i} elements. The Reference Sheet contains more information on slicing operations; this is a fundamental operation for dealing with numerical arrays, so make sure you understand it well.
 
 \begin{itemize}
-	\item The first segment of the {\tt file1.wav} signal contains a few milliseconds of background noise. From visual inspection, estimate the temporal length of this initial segment; how many samples does this interval corresponds to? Open a new Figure and plot this initial segment only using the slicing notation;
-	\item The second segment of this signal corresponds to an almost periodic oscillating signal; what is the approximate period of the oscillations in seconds? And in samples? Obtain a range of indices containing a single period of the oscillations and plot it;
+	\item The first segment of the {\tt file1.wav} signal contains a few milliseconds of background noise. From visual inspection, estimate the temporal length of this initial segment; how many samples does this interval corresponds to? Open a new Figure and plot this initial segment only using the slicing notation; make sure to add correct title and axes labels!
+	\item The second segment of this signal corresponds to an almost periodic oscillating signal; what is the approximate period of the oscillations in seconds? And in samples? Obtain a range of indices containing a single period of the oscillations and plot it in a separate Figure, again with a title and axes labels;
 \end{itemize}
 
 One very important distinction to keep in mind is the difference between the \emph{index} of a given element in an array - i.e. its position in the array - and the \emph{content} of this element - i.e. the value that is stored at that position. The following exercise explores this concept.
 
 \begin{itemize}
-	\item Identify the first period of the oscillations and plot it against time in a separate Figure;
-	\item Use the {\tt np.max()} function to find the amplitude of the highest peak in this signal segment, and use the function {\tt np.argwhere()} to identify the sample where the maximum occurs;
-	\item What is the time instant (in seconds) where the maximum amplitude occurs?
+	\item Use the {\tt np.max()} function on the segment containing the single oscillation period to find the amplitude of the highest peak in this signal segment, and use the function {\tt np.argwhere()} to identify the sample within that segment where the maximum occurs;
+	\item What is the time instant (in seconds) within the segment where the maximum amplitude occurs? What is the time instant within the whole signal where this same maximum occurs?
 \end{itemize}
 
 
-\subsection{Advanced Exercise: Estimating Heart Rate}
+\section{Advanced Exercise: Estimating Heart Rate}
 
-This next exercise should cover a little bit of all the topics discussed so far; we expect that by the end of this Tutorial session, you should have the necessary know-how and tools to solve it at your disposal.
+This last exercise should cover a little bit of all the topics discussed so far; we expect that by the end of this Tutorial session, you should have the necessary know-how and tools required to solve it at your disposal.
 
 The file {\tt ecg.wav} contains approximately 10 seconds of an ECG signal recorded from a patient. Your tasks are:
 
 \begin{itemize}
-	\item load the file and visually inspect the signal;
-	\item create a Numpy array with the data corresponding to the first 5 peaks;
-	\item use a `for' loop to read the array in segments corresponding to each peak;
+	\item load the file, plot the signal and visually inspect the figure;
+	\item create a Numpy array containing the segment of data corresponding to the first 5 heart beats only;
+	\item use a {\tt for}-loop to read the array data in segments corresponding to a single heart beat each;
 	\item locate the peak amplitude of each segment, and find its corresponding sample value and time instant;
-	\item plot the peak locations on top of the original signal and check if you located them correctly;
-	\item calculate the average heart rate (in beats per minute - BPM) for this signal based on the time interval between the peaks.
+	\item plot the peak locations with a marker on top of the original signal and check if you located them correctly;
+	\item calculate the average heart rate (in beats per minute - BPM) for this signal based on the average time interval between the peaks.
 \end{itemize}
 
-Numpy has some in-built functions that might help with some of these tasks; do search for them. Pay extra attention to how the indices in each segment correspond to the indices in the original array; the same is valid for the time instant of each peak.
+Pay extra attention to how the indices in each segment correspond to the indices in the original array; the same is valid for the time instant of each peak.
 
 The heart rate we obtained is approximately 93.7 beats per minute.
